# astroterm

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  LICENSE  Makefile  README.md  apt-packages.txt  ascii_utils.c  astro.c  astro.h  astroterm.c  bit.c  bit.h  bit_utils.c  bit_utils.h  celestial_bodies.c  celestial_bodies.h  codecov.yml  coord.c  coord.h  cstar.c  cstar.h  drawing.c  drawing.h  format.sh  install.sh  main.c  meson.build  meson.options  misc.c  misc.h  parse_BSC5.c  parse_BSC5.h  star.c  term.c  term.h  term_utils.c  term_utils.h
.github/workflows/: ci.yml
data/: BSC5_constellations  BSC5_names  bsc5_constellations.txt  cities.csv  cities100000.csv  keplerian_elements.c  keplerian_elements.h  meson.build
include/: astro.h  bit.h  coord.h  core.h  core_position.h  core_render.h  drawing.h  math_util.h  meson.build  parse_BSC5.h  starsaver.h  stopwatch.h  strptime.h  term.h  version.h
scripts/: embed.py  embed.sh  filter_cities.py
src/: astro.c  bit.c  city.c  coord.c  core.c  core_position.c  core_render.c  drawing.c  main.c  meson.build  optparse.c  parse_BSC5.c  starsaver.c  stopwatch.c  strptime.c  term.c
test/: astro_test.c  bit_test.c  city_test.c  coord_test.c  core_test.c  drawing_test.c  meson.build  stopwatch_test.c
test/unity/: unity.h  unity_internals.h
