project_source_files += [
    files('astro.c'),
    files('bit.c'),
    files('coord.c'),
    files('core.c'),
    files('core_position.c'),
    files('core_render.c'),
    files('drawing.c'),
    files('parse_BSC5.c'),
    files('stopwatch.c'),
    files('term.c'),
    files('city.c'),
    files('strptime.c')
]

# NOTE:  We add main separately in the main Meson.build file to avoid duplicate "mains" when testing
